--- a/css/motorama.css
+++ b/css/motorama.css
@@ -1,5 +1,6 @@
 body{
     width:100%;
+    background-color: #000;
 }
 
 .botaolog{
@@ -16,12 +17,12 @@ body{
 }
 
 .ca{
-    color:white;
+    color:rgba(141, 141, 141, 0.918);
 }
 
 .ca:hover{
-    border-bottom:1px solid white;
     color:white;
+    text-decoration: none
 }
 
 .parallax {
@@ -38,14 +39,52 @@ body{
     background-size: cover;
 }
 
+.parallax_noti{
+        background-image: url("https://images6.alphacoders.com/592/592348.jpg");
+}
+
+.caption span.notiti{
+    font-size: 50px;
+    color:white;
+    padding:1%;
+    border-top:1px solid white;
+    border-bottom:1px solid white;
+}
+
+
+.caption1 span.notides{
+    margim-top:50%;
+    border:none;
+    font-size: 20px;
+    color:white;
+}
+
 .caption {
     position: absolute;
     left: 0;
-    top: 50%;
+    top: 40%;
     width: 100%;
     text-align: center;
     color: #000;
     }
+
+.caption1 {
+    position: absolute;
+    left: 0;
+    top: 55%;
+    width: 100%;
+    text-align: center;
+}
+
+@media screen and (max-width: 360px){
+    .caption1{
+        top:70%;
+    }
+}
+
+.botao:hover{
+    background-color: #08088A;
+}
 
 .caption span.border {
     background-color: #111;
@@ -147,14 +186,18 @@ input[type="submit"]:hover {
     border-bottom:0.2px solid white;
 }
 
-.card {
+.eainoti{
+    border-bottom: none;
+}
+
+/*.card {
     transition: transform .2s;
     margin: 0 auto;
 }
 
 .card:hover {
     transform: scale(1.6);
-}
+}*/
 
 .frontnoti{
     border:1px solid #353535;
@@ -292,6 +335,49 @@ input[type="submit"]:hover {
     }
 }
 
+.comentariod{
+    padding-left: 5%;
+    height: auto;
+    border:none;
+    color:white;
+    background-color:black;
+    font-size:30px;
+}
+
+.coment{
+    margin-top: 5%;
+}
+
+.textcoment{
+    margin-left: 5%;
+    width: 80%;
+    -webkit-transition: width .35s ease-in-out;
+    transition: width .35s ease-in-out;
+}
+
+.cardn{
+    color:white;
+}
+
+.cardn:hover{
+    color:white;
+    text-decoration: none
+}
+
+.textcoment:focus{
+    width: 90%;
+}
+
+.cometbtn{
+    margin-top: 1%;
+    margin-bottom: 3%;
+    margin-left:5%;
+    -webkit-transition: margin-left .35s ease-in-out;
+    transition: margin-left .35s ease-in-out;
+}
+
+
+
 .form-control {
     box-shadow: none;		
     font-weight: normal;
@@ -309,7 +395,7 @@ input[type="submit"]:hover {
     padding-right: 35px;
     border-color: #dfe3e8;
     border-radius: 4px !important;
-    box-shadow: none
+    box-shadow: none;
 }
 .search-box .input-group-addon {
     min-width: 35px;
